2004-09-01	blytkerchan
	* swap.c: new file

2004-08-11	blytkerchan
	* compare_and_exchange.c (compare_and_exchange_int): add semicolon

	* fetch_and_add.c (fetch_and_add): call compare_and_exchange_int in
	stead of compare_and_exchange

	* compare_and_exchange.c (compare_and_exchange_ptr): move from
	compare_and_exchange
	(compare_and_exchange_int): new function

2004-08-10	blytkerchan
	* fetch_and_add.c (fetch_and_add): no longer cast third param of
	compare_and_exchange
	(compare_and_exchange): change prototype
	rename src_ptr to src

	* fetch_and_add.c (fetch_and_add): make first param volatile

2004-08-03	blytkerchan
	* fetch_and_add.c: use full path for headers
	(fetch_and_add): cast last argument for compare_and_exchange to void*

2004-08-02	blytkerchan
	* fetch_and_add.c: add necessary headers

	* fetch_and_add.c: new file

2004-04-12	blytkerchan
	* set.c: new file

2004-04-08	blytkerchan
	* compare_and_exchange.c: add 2004 to the license years
	* decrement.c: ditto
	* increment.c: ditto

2004-03-09	blytkerchan
	* increment.c (atomic_increment): re-implement so it'll work when not optimizing
	* decrement.c (atomic_decrement): ditto

2004-02-03	blytkerchan
	* increment.c (atomic_increment): don't return a value
	* decrement.c (atomic_decrement): ditto

2003-01-06	blytkerchan
	* increment.c: new file
	* decrement.c: ditto

2003-10-18	blytkerchan
	* main.c: moved to ../test
	* Makefile: removed
	* compare_and_exchange.h: moved to ../include

2003-10-17	blytkerchan
	* main.c: add a new test for the case that should work

	* Makefile: new file
	* compare_and_exchange.c: ditto
	* compare_and_exchange.h: ditto
	* main.c: ditto